# image-text-structurizer

./: README.md  pyproject.toml
image_text_structurizer/: __init__.py  main.py  prompts.py
