[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-text-structurizer"
version = "2025.12.21124037"
description = "A new package that processes user-provided text descriptions of images and returns structured, validated outputs using pattern matching. It ensures that the generated content adheres to a predefined f"
readme = "README.md"
authors = [{ name = "image-text-structurizer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/image-text-structurizer"
